# RayTracer

./: .cppRules  .gitignore  CMakeLists.txt  Makefile  README.md  config.cfg
.github/workflows/: cppCompilation.yml  cppNorm.yml  painauchocolat.yml
cmake/: FindCUDA.cmake
configs/: Space.cfg  config.cfg  fractale.cfg  infinite.cfg  mobius.cfg  mountain.cfg  normalMapping.cfg  planes.cfg  rectangle.cfg  refraction.cfg  shrek.cfg  sphere.cfg  torus.cfg  transformations.cfg  wallOfTom.cfg
doc/: TechnicalDocumentation.md
documentation/: README.md
renders/: Cubes.md  Fractale.md  InfiniteRefraction.md  MountainOfBogosses.md  NormalMapping.md  ShrekOBJ.md  Space.md  TorusReflect.md  Transformations.md  WallOfTom.md
shell/: buildWithCUDA.sh  cudaProfile.sh  runStyle.sh  styleChecker.sh
src/: CMakeLists.txt  main.cpp
src/Core/: CMakeLists.txt  Core.cpp  Core.hpp  Renderer.cpp  Renderer.hpp  main.cpp
src/Factory/: CMakeLists.txt  Factory.cpp  Factory.hpp  IPrimitiveFactory.hpp  PlaneFactory.hpp  PrimitiveFactory.cpp  PrimitiveFactory.hpp  SphereFactory.hpp
src/Factory/CameraFactory/: CMakeLists.txt  CameraFactory.cpp  CameraFactory.hpp
src/Factory/LigthsFactory/: AmbientFactory.cpp  AmbientFactory.hpp  CMakeLists.txt  DirectionalFactory.cpp  DirectionalFactory.hpp  ILightFactory.hpp  LightFactory.cpp  LightFactory.hpp  PointFactory.cpp  PointFactory.hpp
src/Factory/MaterialFactory/: CMakeLists.txt  MaterialFactory.cpp  MaterialFactory.hpp
src/Factory/PrimitivesFactory/: CMakeLists.txt  ConeFactory.cpp  ConeFactory.hpp  CylinderFactory.cpp  CylinderFactory.hpp  FractaleCubeFactory.cpp  FractaleCubeFactory.hpp  IPrimitiveFactory.hpp  InfiniteConeFactory.cpp  InfiniteConeFactory.hpp  InfiniteCylinderFactory.cpp  InfiniteCylinderFactory.hpp  MobiusFactory.cpp  MobiusFactory.hpp  OBJFactory.cpp  OBJFactory.hpp  PlaneFactory.cpp  PlaneFactory.hpp  PrimitiveFactory.cpp  PrimitiveFactory.hpp  RectangleFactory.cpp  RectangleFactory.hpp  SphereFactory.cpp  SphereFactory.hpp  TanglecubeFactory.cpp  TanglecubeFactory.hpp  TorusFactory.cpp  TorusFactory.hpp  TrianglesFactory.cpp  TrianglesFactory.hpp
src/GPU/: CMakeLists.txt  CUDAKernel.cu  CUDAKernel.cuh  CUDAStructures.cuh  GPURenderer.cpp  GPURenderer.hpp
src/Graphic/: CMakeLists.txt  Camera.cpp  Camera.hpp  Color.cpp  Color.hpp
src/GraphicRenderer/: CMakeLists.txt  GraphicRenderer.cpp  GraphicRenderer.hpp  Inotify.cpp  Inotify.hpp
src/LibLoader/: CMakeLists.txt  Exception.hpp  LibLoader.cpp  LibLoader.hpp  LoaderType.hpp
src/Lights/: ALight.cpp  ALight.hpp  CMakeLists.txt  ILight.hpp
src/Lights/AmbientLight/: AmbientLight.cpp  AmbientLight.hpp  CMakeLists.txt  EntyPoint.cpp
src/Lights/DirectionalLight/: CMakeLists.txt  DirectionalLight.cpp  DirectionalLight.hpp  EntyPoint.cpp
src/Lights/PointLight/: CMakeLists.txt  EntyPoint.cpp  PointLight.cpp  PointLight.hpp
src/Lights/PositionLight/: CMakeLists.txt  EntyPoint.cpp  PositionLight.cpp  PositionLight.hpp
src/Materials/: AMaterial.cpp  AMaterial.hpp  CMakeLists.txt  IMaterial.hpp
src/Materials/ChessPattern/: CMakeLists.txt  ChessPatternMaterial.cpp  ChessPatternMaterial.hpp  EntryPoint.cpp
src/Materials/Default/: CMakeLists.txt  DefaultMaterial.cpp  DefaultMaterial.hpp  EntryPoint.cpp
src/Materials/FileTexture/: CMakeLists.txt  EntryPoint.cpp  FileTextureMaterial.cpp  FileTextureMaterial.hpp
src/Materials/NormalMapping/: CMakeLists.txt  EntryPoint.cpp  NormalMappingMaterial.cpp  NormalMappingMaterial.hpp
src/Materials/PerlinNoise/: CMakeLists.txt  EntryPoint.cpp  PerlinNoiseMaterial.cpp  PerlinNoiseMaterial.hpp
src/Materials/Reflection/: CMakeLists.txt  EntryPoint.cpp  ReflectionMaterial.cpp  ReflectionMaterial.hpp
src/Materials/Refraction/: CMakeLists.txt  EntryPoint.cpp  RefractionMaterial.cpp  RefractionMaterial.hpp
src/Materials/Transparency/: CMakeLists.txt  EntryPoint.cpp  Entrypoint.cpp  TransparencyMaterial.cpp  TransparencyMaterial.hpp
src/Math/: CMakeLists.txt  HitData.hpp  Matrix4x4.hpp  Point3D.cpp  Point3D.hpp  Ray.cpp  Ray.hpp  Rectangle3D.cpp  Rectangle3D.hpp  Vector3D.cpp  Vector3D.hpp
src/Parser/: CMakeLists.txt  LightsParser.cpp  LightsParser.hpp  Parser.cpp  Parser.hpp  PrimitivesParser.cpp  PrimitivesParser.hpp
src/Parser/ParserConfig/: AntialiasingConfig.cpp  AntialiasingConfig.hpp  CMakeLists.txt  CameraConfig.cpp  CameraConfig.hpp  LightsConfig.cpp  LightsConfig.hpp  PrimitivesConfig.cpp  PrimitivesConfig.hpp  RenderingConfig.cpp  RenderingConfig.hpp
src/Primitives/: APrimitive.cpp  APrimitive.hpp  CMakeLists.txt  IPrimitive.hpp
src/Primitives/Cone/: CMakeLists.txt  Cone.cpp  Cone.hpp  EntyPoint.cpp
src/Primitives/Cylinder/: CMakeLists.txt  Cylinder.cpp  Cylinder.hpp  EntyPoint.cpp
src/Primitives/FractaleCube/: CMakeLists.txt  EntryPoint.cpp  FractaleCube.cpp  FractaleCube.hpp
src/Primitives/InfiniteCone/: CMakeLists.txt  EntryPoint.cpp  InfiniteCone.cpp  InfiniteCone.hpp
src/Primitives/InfiniteCylinder/: CMakeLists.txt  EntryPoint.cpp  InfiniteCylinder.cpp  InfiniteCylinder.hpp
src/Primitives/Mobius/: CMakeLists.txt  EntryPoint.cpp  Mobius.cpp  Mobius.hpp
src/Primitives/Plane/: CMakeLists.txt  EntyPoint.cpp  Plane.cpp  Plane.hpp
src/Primitives/Rectangle/: CMakeLists.txt  EntryPoint.cpp  Rectangle.cpp  Rectangle.hpp
src/Primitives/Sphere/: CMakeLists.txt  EntyPoint.cpp  Sphere.cpp  Sphere.hpp
src/Primitives/Tanglecube/: CMakeLists.txt  EntyPoint.cpp  Tanglecube.cpp  Tanglecube.hpp
src/Primitives/Torus/: CMakeLists.txt  EntyPoint.cpp  Torus.cpp  Torus.hpp
src/Primitives/Triangles/: CMakeLists.txt  EntryPoint.cpp  Triangles.cpp  Triangles.hpp
src/core/: CMakeLists.txt
src/lights/AmbientLight/: CMakeLists.txt
src/lights/DirectionalLight/: CMakeLists.txt
src/primitives/Plane/: CMakeLists.txt  Plane.cpp
src/primitives/Sphere/: CMakeLists.txt  Sphere.cpp  Sphere.hpp
