add_subdirectory(Plane)
add_subdirectory(Sphere)
add_subdirectory(Cylinder)
add_subdirectory(Cone)
add_subdirectory(Torus)
add_subdirectory(Tanglecube)
add_subdirectory(Triangles)
add_subdirectory(OBJ)
add_subdirectory(InfiniteCone)
add_subdirectory(InfiniteCylinder)
add_subdirectory(FractaleCube)
add_subdirectory(Rectangle)
